--- a/requirements.txt
+++ b/requirements.txt
@@ -85,8 +85,11 @@ pyproject-hooks==1.0.0
     # via build
 pytest==7.4.3
     # via
+    #   pytest-asyncio
     #   pytest-cov
     #   quara-releaser (pyproject.toml)
+pytest-asyncio==0.23.2
+    # via quara-releaser (pyproject.toml)
 pytest-cov==4.1.0
     # via quara-releaser (pyproject.toml)
 sniffio==1.3.0
